@@ -52,10 +52,26 @@ input    { border: 1px solid #0E67A1; }
 input.button 		 { background-color: white; }
 input.button:hover { border-color:  #FC902E; }
 
-
-
 #frmlogin	      { margin: 0 10px 0 10px;  }
 #frmlogin fieldset.button { text-align: right; }
 
+/* -- message styles ----------------------------------- */
 
+#system-message {
+	background: none repeat scroll 0 0 #FFFFFF;
+	border: 1px solid #CCCCCC;
+	margin: 10px auto 0;
+	padding: 5px 15px 10px;
+	text-align: left;
+	width: 410px;
+}
 
+#system-message dt {
+	color: red;
+	margin: 5px 0;
+	font-weight: bold;
+}
+
+#system-message dd {
+	margin: 0px;
+}
