@@ -28,6 +28,7 @@ $ -> Language fix or change
 
 07-Aug-2013 Jean-Marie Simonet
  #$ [#31622] Media Manager doesn't cope with folder names that include spaces. Thanks Richard McDaniel
+ # [#31410] Warnings at the offline screen looks bad. Thanks Lu Nguyen
 
 03-Aug-2013 Jean-Marie Simonet
  # [#31411] Show Offline image only if it exists. Thanks Tobias Zulauf
